--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/** modern css reset: https://piccalil.li/blog/a-modern-css-reset/ */
-
 :root {
 	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 	font-size: 16px;
@@ -13,8 +11,19 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	/* custom variables */
+	/* colors in hsl */
+	--clr-white: 0 0% 100%;
+	--clr-black: 0 0% 0%;
+	--clr-primary: 191.3 72.7% 95.7%;
+	--clr-accent: 24.4 95.5% 65.1%;
+	--clr-text-primary: 0 0% 0%;
+	--clr-text-secondary: 0 0% 54.1%;
+	--clr-notification: 358.5 88.9% 64.7%;
 }
 
+/** modern css reset: https://piccalil.li/blog/a-modern-css-reset/ */
 /* Box sizing rules */
 html {
 	box-sizing: border-box;
@@ -92,4 +101,13 @@ select {
 		transition-duration: 0.01ms !important;
 		scroll-behavior: auto !important;
 	}
+}
+
+/*********************/
+/** UTILITY CLASSES **/
+/*********************/
+
+.flex {
+	display: flex;
+	gap: var(--gap, 1rem);
 }
